application/hello_nginx/hello_nginx_proxy/deploy.yaml
# hello-nginx-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-nginx-proxy
  labels:
    app: hello-nginx-proxy
    version: v1.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nginx-proxy
      version: v1.0
  template:
    metadata:
      labels:
        app: hello-nginx-proxy
        version: v1.0
    spec:
      containers:
      - name: hello-nginx-proxy
        image: nginx:1.22.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/hello-nginx-proxy.conf
          name: nginx-etc
          subPath: hello-nginx-proxy.conf
          readOnly: true
        - mountPath: /usr/share/nginx/html/index.html
          name: nginx-html
          subPath: index.html
          readOnly: true

      volumes:
      - name: nginx-etc
        configMap:
          name: hello-nginx-proxy
      - name: nginx-html
        # gitRepo:
        #   repository: https://github.com/deltavoid/nginx_html_example.git
        #   revision: master      
        #   directory: .     
        configMap:
          name: hello-nginx-proxy-index

---
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx-proxy
  labels:
    app: hello-nginx-proxy
spec:
  type: NodePort
  selector:
    app: hello-nginx-proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  sessionAffinity: None
